# python_study

task1/: pyproject.toml  task1.py  test.py  test2.py
task1_2/: output.txt  study.py  task1.db
task3/: README.md  pyproject.toml  task.db  task3 copy.py  task3.py  task3_2 copy.py  task3_2.py  task4.py  test.py  test_4_asy.py  test_a copy.py  test_a.py  test_b.py
task4/: pyproject.toml  task4.db  task4.py  test.py  test_all.py  test_coroutine.py  test_deque.py
task4_substitute/: task4api.db  test_task4api.db
task4_substitute/domain/page/: router.py
task5/: database.py  main.py  models.py  pyproject.toml
task5/domain/page/: crud.py  schema.py
task5/tests/domain/page/: conftest.py  test_crud.py  test_router.py  test_schema.py
