[tool.poetry]
name = "task4"
version = "0.1.0"
description = ""
authors = ["yhyun <yhyun@autocrypt.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.11"
aiosqlite = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
